fixed backdrop blur and some spacings

--- a/src/base.css
+++ b/src/base.css
@@ -225,7 +225,7 @@ button {
 }
 
 .backdrop {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   z-index: 20;
