--- a/src/components/event/event.css
+++ b/src/components/event/event.css
@@ -25,6 +25,19 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width: 479px) {
+  .event-cards_date-card {
+    background: url('../../assets/backgrounds/event-text-card.webp');
+    background-size: cover;
+    padding: 20px 20px 20px 20px;
+    width: 100%;
+    height: 395px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
 .event-cards_date-card_slogan {
   color: var(--primary-red);
   font-family: Nohemi;
