--- a/src/components/our-musicians/our-musicians.css
+++ b/src/components/our-musicians/our-musicians.css
@@ -13,6 +13,13 @@
 }
 
 @media screen and (max-width: 767px) {
+  .our-musicians-spacing {
+    margin-top: 30px;
+    display: flex;
+    gap: 30px;
+    min-height: 700px;
+  }
+
   .our-musicians_card {
     display: flex;
     flex-direction: column;
@@ -159,10 +166,29 @@
 @media screen and (max-width: 767px) {
   .our-musicians_names {
     display: flex;
-    gap: 20px;
-    overflow-x: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
+    gap: 25px;
+    overflow-x: scroll;
+    scrollbar-width: thin;
+    -ms-overflow-style: thin;
+  }
+  .our-musicians_name:nth-child(1) {
+    min-width: 275px;
+  }
+  .our-musicians_name:nth-child(2) {
+    min-width: 140px;
+  }
+  .our-musicians_name:nth-child(3) {
+    min-width: 270px;
+  }
+  .our-musicians_name:nth-child(4) {
+    min-width: 262px;
+  }
+  .our-musicians_name:hover,
+  .our-musicians_name:focus {
+    color: var(--primary-red);
+  }
+  .our-musicians_name.active {
+    color: var(--primary-red);
   }
 }
 
@@ -171,6 +197,14 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
+  }
+  .our-musicians_name:hover,
+  .our-musicians_name:focus {
+    color: var(--primary-red);
+  }
+  .our-musicians_name.active {
+    color: var(--primary-red);
+    transform: translateX(20px);
   }
 }
 
@@ -183,17 +217,6 @@
   line-height: 62px;
   text-transform: uppercase;
   transition: transform 0.3s ease;
-}
-
-.our-musicians_name:hover,
-.our-musicians_name:focus {
-  color: var(--primary-red);
-  transform: translateX(20px);
-}
-
-.our-musicians_name.active {
-  color: var(--primary-red);
-  transform: translateX(20px);
 }
 
 @media screen and (max-width: 1439px) {
